@@ -1,3 +1,8 @@
+2008-08-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/36688
+	* g++.dg/init/const6.C: New test.
+
 2008-08-11  Michael Matz  <matz@suse.de>
 
 	PR target/36613
